syntax = "proto3";

package org.laokou.distributed.identifier.api;
option java_multiple_files = true;

message DistributedIdentifierCmd {

}

message DistributedIdentifierResult {
	string code = 1;
	string msg = 2;
	int64 data = 3;
}

service DistributedIdentifierServiceI {
	rpc generateSnowflake(DistributedIdentifierCmd) returns (DistributedIdentifierResult);
}
